# progenitors

./: .buildinfo  .coverage  .gitignore  CONTRIBUTING.md  README.md  environment.yml  genindex.html  index.html  objects.inv  options.py  progenitors.py  py-modindex.html  pyproject.toml  search.html  searchindex.js  sed.html  sheetproc.py  shibboleth.py  test_methods.py  util.py
.doctrees/: index.doctree  sed.doctree
.github/workflows/: ci.yml  docs.yml
_modules/: index.html
_static/: documentation_options.js
davies18/: LFUNC_results.tex  Lfunc_obs_v2.pro  legend_astro.pro  m_hi_lo_fit.pro  setplot.pro
docs/: Makefile  README.md  conf.py  index.rst
docs/_build/: .buildinfo  genindex.html  objects.inv  py-modindex.html  (+2 more)
examples/: README.md  example_davies18.py  example_env_config.py  example_extinction.py  example_options.py  example_package.py  example_sed_constants.py  example_sed_utilities.py  example_sheets.py  example_simulation.py  example_util.py
progenitors/: __init__.py  __main__.py  _version.py  env_config.py  formatting_utils.py  options.py  pipeline.py  pipeline_logging.py  sfd_dust.py  util.py
sed/: analysis.py  check_backend.py  constants.py  dust.py  limits.py  plotting.py  test.py  test_rsg.py  utilities.py
simulation/: input_masses.txt  simulation.py  util.py
testing/: get_host_data.py
tests/: conftest.py  test_davies18.py  test_env_config.py  test_extinction.py  test_formatting_utils.py  test_options.py  test_pipeline_logging.py  test_pipeline_profile.py  test_pipeline_speedups.py  test_progenitors_package.py  test_sheetproc.py  test_util.py
(+134 files in other folders)
